fix: replace Stream.toList() with Collectors.toList() for Java 11 compatibility in jadx-gui module